crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_1.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\\n\"\n\"\\r\"\n        "
---
Source code:

"\n"
"\r"
        

Tokens:
[
    Token {
        tk_type: Text,
        value: "\n",
        address: Address(2..5),
    },
    Token {
        tk_type: Text,
        value: "\r",
        address: Address(7..10),
    },
]
