crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_10.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\\x{0B\"\n        "
---
Source code:

"\x{0B"
        

Tokens:
lex::invalid_escape_sequence

  × invalid escape sequence.
   ╭─[buggy:2:3]
 1 │ 
 2 │ "\x{0B"
   ·   ──┬─
   ·     ╰── this escape sequence isn't valid.
 3 │         
   ╰────
  help: expected byte codepoint end `}`.
