crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_12.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\\x{7F}\"\n        "
---
Source code:

"\x{7F}"
        

Tokens:
[
    Token {
        tk_type: Text,
        value: "\u{7f}",
        address: Address(2..9),
    },
]
