crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_15.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\"\"\n        "
---
Source code:

"""
        

Tokens:
lex::unclosed_string_quotes

  × unclosed string quotes.
   ╭─[buggy:2:4]
 1 │     
 2 │ ╭─▶ """
 3 │ ├─▶         
   · ╰──── no ending quote specified.
   ╰────
