crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_3.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\\u{\"\n        "
---
Source code:

"\u{"
        

Tokens:
lex::invalid_escape_sequence

  × invalid escape sequence.
   ╭─[buggy:2:3]
 1 │ 
 2 │ "\u{"
   ·   ─┬─
   ·    ╰── this escape sequence isn't valid.
 3 │         
   ╰────
  help: expected hex digit.
