crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_5.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\\u{00\"\n        "
---
Source code:

"\u{00"
        

Tokens:
lex::invalid_escape_sequence

  × invalid escape sequence.
   ╭─[buggy:2:3]
 1 │ 
 2 │ "\u{00"
   ·   ──┬──
   ·     ╰── this escape sequence isn't valid.
 3 │         
   ╰────
  help: expected hex digit.
